Fix mobile view elements alignment

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 textarea,
 input[type="password"],
 select {
-	width: 100%;
+	flex-grow: 1;
 	border-radius: 5px;
 	border: none;
 	outline: none;
@@ -191,7 +191,11 @@ button {
 	}
 
 	.text-container {
-		height: 30%;
+		height: 25%;
+	}
+
+	.input-container {
+		flex-direction: column;
 	}
 
 	.text-input {
